--- a/Pagina/style.css
+++ b/Pagina/style.css
@@ -19,11 +19,23 @@ main { flex: 1 0 auto; }    /* ocupa alto disponible */
     background: #000;
     padding: 10px 20px;
 }
-.logo { display: flex; align-items: center; gap: 10px; margin-right: 30px; }
-.logo img { height: 40px; width: auto; }
-.logo span { color: #fff; font-size: 20px; font-weight: 300; }
+.logo { 
+    display: flex; 
+    align-items: center; 
+    gap: 10px; 
+    margin-right: 30px; 
+}
 
-.nav-links { list-style: none; display: flex; gap: 25px; }
+.logo img { 
+    height: 40px;
+    width: auto; 
+}
+
+.nav-links { list-style: none; 
+    display: flex; 
+    gap: 25px; 
+}
+
 .nav-links a {
     color: #3498db;
     text-decoration: none;
@@ -31,6 +43,7 @@ main { flex: 1 0 auto; }    /* ocupa alto disponible */
     font-weight: 300;
     transition: color .3s ease;
 }
+
 .nav-links a:hover { color: #5dade2; }
 
 /* ========== INICIO (HERO) ========== */
@@ -218,20 +231,6 @@ body.form-page .container { max-width: 900px; }            /* MÁS ANCHO que cam
 .site-footer .footer-inner{
     max-width:1100px; margin:0 auto; text-align:center;
     font-size:28px; font-weight:700;
-}
-
-/* ========== RESPONSIVE ========== */
-@media (max-width: 1024px){ .calendar-grid{ grid-template-columns:repeat(2,1fr); } }
-@media (max-width: 900px){
-    .hero-card{ grid-template-columns:1fr; }
-    .hero-img img{ height:220px; }
-    .registro-card{ flex-direction:column; align-items:center; }
-    .registro-img, .registro-info{ width:100%; }
-}
-@media (max-width: 640px){
-    .calendar-grid{ grid-template-columns:1fr; }
-    .event-card{ min-height:320px; }
-    .form-grid{ grid-template-columns: 1fr; }
 }
 
 /* ====== TABLA DE CAMPEONATO ====== */
