--- a/Pagina/style.css
+++ b/Pagina/style.css
@@ -29,10 +29,8 @@ main{
     background:#000; 
     padding:12px 20px;                           
 }
-.logo img{   /* ver */
+.logo img{  
     height:56px; 
-    width:auto; 
-    display:block; 
 }    
 .enlaces{ 
     display:flex; 
@@ -44,10 +42,6 @@ main{
     text-decoration:none; 
     font-size:18px; 
 }
-.enlaces a.activo{ 
-    color:#fff; 
-    font-weight:700; 
-}             
 
 .contenedor{
     max-width:1200px;                                       
@@ -127,6 +121,7 @@ main{
     display:flex; 
     gap:12px; 
     margin-top:8px; 
+    margin-left: 120px;
 } 
 .boton-icono{
     background-color: #666;
@@ -187,10 +182,12 @@ main{
     margin-bottom:8px; 
 }                   
 .cabecera h2{ 
+    text-align: center;
     font-size:20px; 
     margin-bottom:4px; 
 }               
 .cabecera .sub{ 
+    text-align: center;
     color:#666; 
     font-weight:400; 
 }                    
@@ -200,8 +197,7 @@ main{
 }                                        
 .pista img{ 
     width:100%; 
-    height:180px; 
-    display:block; 
+    height:180px;  
 }
 
 .mas{                                                              
@@ -223,7 +219,7 @@ main{
     min-height:100vh;                                                
 }
 
-/* caja de registro*/
+/* box (registro) */
 .caja{
     max-width:1400px; 
     margin:40px auto;                             
@@ -363,10 +359,9 @@ input::placeholder, textarea::placeholder{
 } 
 
 /* ==== Responsive ==== */
-@media (max-width: 900px){                                          /* Reglas para pantallas chicas */
-    .caja-superior{ grid-template-columns: 1fr; }                     /* Inicio: imagen y texto apilados */
-    .caja{ grid-template-columns: 1fr; }                              /* Cualquier card en una columna */
-    .grilla-form{ grid-template-columns: 1fr; }                       /* Formularios a una sola columna */
-    .recuadro{ height:300px; }                                        /* Imagen de inicio más baja */
-    .caja .imagen{ height:320px; }                                    /* Altura de imagen en cards */
+@media (max-width: 900px){                                          
+    .caja-superior{ grid-template-columns: 1fr; }                    
+    .caja{ grid-template-columns: 1fr; }                             
+    .grilla-form{ grid-template-columns: 1fr; }                       
+    .caja .imagen{ height:320px; }                                    
 }
